--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="links">
         <a href="index.html">home</a> /<a href="about.html">about</a> /
-        <a href="gallery.html">gallery</a> / <a href="blog.html">blog</a> /
+        <a href="gallery1.html">gallery</a> / <a href="blog.html">blog</a> /
         <a href="contact.html">contact</a>
       </div>
     </nav>
@@ -30,10 +30,141 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat
             aliquid minus nemo sed est.
           </p>
+
+          <div class="read-more">
+            <p>Read More</p>
+          </div>
         </div>
         <div class="image-overlay"></div>
         <img src="images/home-hero.jpg" alt="" />
       </div>
+
+      <div class="whiteBox">
+        <div class="bigBox">
+          <div class="box1">
+            <p>
+              “Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium totam rem aperiam eaque ipsa
+              quae ab illo inventore veritatis et quasi architecto beatae vitae
+              dicta sunt explicabo. Iste natus error sit voluptatem accusantium
+              doloremque laudantium totam rem aperiam eaque ipsa quae ab illo
+              inventore veritatis et quasi architecto beatae vitae dicta sunt
+              explicabo”
+            </p>
+          </div>
+
+          <div class="box2">
+            <h1>John Smith</h1>
+            <p>Corporation CEO, books author.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="purpleBox">
+        <div class="title">
+          <h1>upcoming events:</h1>
+        </div>
+
+        <section class="dates">
+          <div class="reusable">
+            <div class="date">
+              <h1>06</h1>
+              <p>jun</p>
+            </div>
+
+            <div class="eventText">
+              <p id="firstText">Sed et persipiatis unde omnis iste natus</p>
+              <p id="secondText">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Aliquid temporibus quos aspernatur
+              </p>
+            </div>
+          </div>
+          <div class="reusable">
+            <div class="date">
+              <h1>30</h1>
+              <p>jul</p>
+            </div>
+
+            <div class="eventText">
+              <p id="firstText">Sed et persipiatis unde omnis iste natus</p>
+              <p id="secondText">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Aliquid temporibus quos aspernatur
+              </p>
+            </div>
+          </div>
+          <div class="reusable">
+            <div class="date">
+              <h1>30</h1>
+              <p>aug</p>
+            </div>
+
+            <div class="eventText">
+              <p id="firstText">Sed et persipiatis unde omnis iste natus</p>
+              <p id="secondText">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Aliquid temporibus quos aspernatur
+              </p>
+            </div>
+          </div>
+          <div class="reusable">
+            <div class="date">
+              <h1>23</h1>
+              <p>nov</p>
+            </div>
+
+            <div class="eventText">
+              <p id="firstText">Sed et persipiatis unde omnis iste natus</p>
+              <p id="secondText">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Aliquid temporibus quos aspernatur
+              </p>
+            </div>
+          </div>
+          <div class="reusable">
+            <div class="date">
+              <h1>23</h1>
+              <p>dec</p>
+            </div>
+
+            <div class="eventText">
+              <p id="firstText">Sed et persipiatis unde omnis iste natus</p>
+              <p id="secondText">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Aliquid temporibus quos aspernatur
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+
+    <div class="pinkBox">
+      <div class="logoBottom">
+        <img src="images/logo/logo-white.svg" alt="" />
+      </div>
+
+      <div class="bottomHero">
+        <p>420 Smoke St. Los Angeles, CA 46318</p>
+        <p>(213)-467-2627</p>
+        <p>info@eventsy.com</p>
+      </div>
+
+      <div class="subscribe">
+        <input
+          class="area"
+          type="email"
+          placeholder="Enter your email to join newsletter..."
+        />
+
+        <div class="button">
+          <p>subscribe</p>
+        </div>
+      </div>
+
+      <div class="socials"><img src="images/social-media/socials.png" /></div>
+      <p id="foot">Copyright 2019 eventsy. All rights reserved</p>
     </div>
   </body>
 </html>
