--- a/gallery.html
+++ b/gallery.html
@@ -28,13 +28,13 @@
         </div>
 
         <div class="gallery-images">
-          <div class="gal-image1">
+          <div id="galImage1" class="gal-image1">
             <div class="gal-image1-overlay"></div>
             <img src="images/gallery/1.png" alt="" />
           </div>
 
           <div class="gal-image2">
-            <div class="gal-image2-overlay"></div>
+            <div id="galImage22" class="gal-image2-overlay"></div>
             <img src="images/gallery/2.jpeg" alt="" />
           </div>
 
