--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="nav-holder">
-      <div class="logo">
+      <div id="weblogo" class="logo">
         <img src="images/logo/logo-white.svg" alt="" />
       </div>
 
